# Proai_service

./: .gitignore  design_proposal.md  protocol.md
.trae/skills/diagram-generator/: SKILL.md
.trae/skills/test/: SKILL.md
Doc/: design_proposal.md  gdb.md  protocol.md  sdk调用文档.md
doc/: gdb.md  todo.md
example/: device_voice_example  device_voice_example.c
main_service/: CMakeLists.txt  README.md  build.sh  deploy.sh  main.c  slave_service.service  toolchain.cmake
main_service/inc/: agent_sdk.h  audio_module.h  cloud_llm.h  cloud_tuya.h  log.h  md5.h  ota_handler.h  queue.h  tuya_protocol.h  utils.h
main_service/src/: audio_module.c  cJSON.c  cloud_llm.c  cloud_tuya.c  log.c  md5.c  ota_handler.c  queue.c  tuya_protocol.c  utils.c
master_service/: Makefile  main.c  master_service
mcutools/: rabbit_mcu_sim.py
python/: draw_arch.py
script/: draw_arch.py
slave_service/: CMakeLists.txt  Makefile  README.md  main.c  slave_service  slave_service.service
slave_service/inc/: ipc_protocol.h  log.h  md5.h  ota_handler.h  tuya_protocol.h  utils.h
slave_service/src/: log.c  md5.c  ota_handler.c  tuya_protocol.c  utils.c
tongqu-sdk/: agent_sdk.h  readme.txt  sdk调用文档.md
tongqu-sdk/agent_linux_sdk_rockchip830/: CMakeCache.txt  Makefile  cmake_install.cmake  full_example  reconnect_example  simple_example
板端例程/: README.md  agent_sdk.h
